cmake_minimum_required(VERSION 3.6)

add_subdirectory(WoodenContainerTexture)
add_subdirectory(WoodenContainerTextureMixedColors)
add_subdirectory(TextureCombined)
add_subdirectory(TextureExercise01)
add_subdirectory(TextureExercise02)
add_subdirectory(TextureExercise03)
add_subdirectory(TextureExercise04)

